# fdock-cgsim

./: .gitignore  CMakeLists.txt  Makefile  README.md  defines.h  docking.dlg  docking.xml  extract_graphs.sh  fdock.c  getparameters.c  getparameters.h  initpop.txt  miscellaneous.c  miscellaneous.h  miscellaneous_inline.h  performdocking.c  performdocking.h  processgrid.c  processgrid.h  processligand.c  processligand.h  processligand_graphtoy.cpp  processligand_inline.h  processresult.c  processresult.h  run.sh  searchoptimum.c  searchoptimum.h  seeds.txt
input_data/: fdock_call.txt
tools/: gen_fdock_luts.cpp
